[tool.poetry]
name = "home-work13-13"
version = "0.1.0"
description = ""
authors = ["viacheslavzorin <zorin-viacheslav@rambler.ru>"]
readme = "README.md"
packages = [{include = "home_work13"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
